# framework.appfw.ui-gadget-1

./: CMakeLists.txt  ui-gadget-1-launcher.rule  ui-gadget-1.efl  ui-gadget-1.manifest
TC/: config  execute.sh  push.sh  tet_scen
TC/unit/: Makefile  tslist  utc_ApplicationFW_ug_create_func.c  utc_ApplicationFW_ug_destroy_all_func.c  utc_ApplicationFW_ug_destroy_func.c  utc_ApplicationFW_ug_destroy_me_func.c  utc_ApplicationFW_ug_disable_effect_func.c  utc_ApplicationFW_ug_get_conformant_func.c  utc_ApplicationFW_ug_get_layout_func.c  utc_ApplicationFW_ug_get_mode_func.c  utc_ApplicationFW_ug_get_parent_layout_func.c  utc_ApplicationFW_ug_get_window_func.c  utc_ApplicationFW_ug_init_func.c  utc_ApplicationFW_ug_is_installed_func.c  utc_ApplicationFW_ug_pause_func.c  utc_ApplicationFW_ug_resume_func.c  utc_ApplicationFW_ug_send_event_func.c  utc_ApplicationFW_ug_send_key_event_func.c  utc_ApplicationFW_ug_send_message_func.c  utc_ApplicationFW_ug_send_result_full_func.c  utc_ApplicationFW_ug_send_result_func.c
client/: CMakeLists.txt  ug-client.c  ug-client.edc  ug-client.h
doc/: ui-gadget_doc.h
include/: SLP_UI_Gadget_PG.h  ug-dbg.h  ug-list.h  ug-manager.h  ug.h  ui-gadget-engine.h  ui-gadget-module.h  ui-gadget.h
packaging/: ui-gadget-1.spec
samples/: CMakeLists.txt
samples/helloUG-efl/: CMakeLists.txt  com.samsung.helloworld.xml  helloUG-efl.c  helloUG-efl.h  helloug.rule  org.tizen.helloworld.manifest  org.tizen.helloworld.xml  ug-helloUG-efl.desktop.in
samples/ugcaller/: CMakeLists.txt  com.samsung.ugcaller.desktop.in  org.tizen.ugcaller.desktop.in  ugcaller.edc
samples/ugcaller/include/: ugcaller.h
samples/ugcaller/src/: ugcaller.c
src/: engine.c  manager.c  module.c  ug.c
template/: CMakeLists.txt  ug-gen.sh.in
template/efl/: CMakeLists.txt.in  ug.c.in  ug.h.in
template/efl/packaging/: ug.spec.in
template/efl/po/: POTFILES.in.in  update-po.sh.in
ug-efl-engine/: CMakeLists.txt  ug-efl-engine.c  ug_effect.edc  ug_effect_3d.edc
