CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ui-gadget-1)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")

SET(CMAKE_SKIP_BUILD_RPATH TRUE)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DDATAFS=\"${DATADIR}\"")
#ADD_DEFINITIONS("-DENABLE_UG_WHITE_LIST")
ADD_DEFINITIONS("-DENABLE_UG_CREATE_CB")
#ADD_DEFINITIONS("-DCHECK_FOCUS_WINDOW_IS_HOME_SCREEN")
IF(_APPFW_FEATURE_PROCESS_POOL)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL")
ENDIF(_APPFW_FEATURE_PROCESS_POOL)
IF(_APPFW_FEATURE_APP_CONTROL_LITE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_APP_CONTROL_LITE")
ENDIF(_APPFW_FEATURE_APP_CONTROL_LITE)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")

INCLUDE(FindPkgConfig)
SET(SRCS src/ug.c
             src/manager.c
             src/module.c
             src/engine.c)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

PKG_CHECK_MODULES(PKGS REQUIRED glib-2.0 dlog x11 ecore-x capi-appfw-application elementary aul ecore dbus-glib-1 pkgmgr-info)
FOREACH(flag ${PKGS_CFLAGS})
	SET(CFLAGS "${CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CFLAGS "${CFLAGS} -I${CMAKE_CURRENT_SOURCE_DIR}/include")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${CFLAGS}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PKGS_LDFLAGS} -ldl -Wl,--no-undefined)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/ui-gadget-module.h DESTINATION include/ug-1)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/ui-gadget.h DESTINATION include/ug-1)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/SLP_UI_Gadget_PG.h DESTINATION include/ug-1)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/ui-gadget-1.efl DESTINATION  /etc/smack/accesses.d)

ADD_SUBDIRECTORY(ug-efl-engine)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(template)
