SET(TEMPLATE_GENERATOR "ug-gen.sh")
SET(TEMPLATE_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/ug-template")
#CONFIGURE_FILE(${TEMPLATE_GENERATOR}.in ${TEMPLATE_GENERATOR} @ONLY)

ADD_CUSTOM_TARGET(${TEMPLATE_GENERATOR} ALL
		COMMAND sed -e 's|\@\@TEMPLATE_DATA_DIR\@\@|${TEMPLATE_DATA_DIR}|g'
		${CMAKE_CURRENT_SOURCE_DIR}/${TEMPLATE_GENERATOR}.in >
		${CMAKE_CURRENT_BINARY_DIR}/${TEMPLATE_GENERATOR}
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${TEMPLATE_GENERATOR}.in
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${TEMPLATE_GENERATOR} DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE
		WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/efl DESTINATION ${TEMPLATE_DATA_DIR} FILES_MATCHING PATTERN "*")
