SET(UG_EFL_ENGINE "${PROJECT_NAME}-efl-engine")
SET(UG_EFL_ENGINE_SRCS ug-efl-engine.c)
SET(UG_ENGINE_EDJ_DIR "${CMAKE_INSTALL_PREFIX}/share/edje")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")

PKG_CHECK_MODULES(UG_EFL_ENGINE_PKGS REQUIRED
	dlog
	elementary
	ecore
	ecore-x
	edje
	capi-appfw-application
	evas)

FOREACH(flag ${UG_EFL_ENGINE_PKGS_CFLAGS})
	SET(UG_EFL_ENGINE_CFLAGS "${UG_EFL_ENGINE_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(UG_EFL_ENGINE_CFLAGS, "${UG_EFL_ENGINE_CFLAGS} -DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

ADD_LIBRARY(${UG_EFL_ENGINE} SHARED ${UG_EFL_ENGINE_SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${UG_EFL_ENGINE} PROPERTIES COMPILE_FLAGS "${UG_EFL_ENGINE_CFLAGS}")
TARGET_LINK_LIBRARIES(${UG_EFL_ENGINE} ${PROJECT_NAME} ${UG_EFL_ENGINE_PKGS_LDFLAGS})

INSTALL(TARGETS ${UG_EFL_ENGINE} DESTINATION /usr/lib)

