SET(HELLOUG_EFL ug-helloUG-efl)
SET(HELLOUG_EFL_SRCS helloUG-efl.c)
SET(UGNAME helloUG-efl)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(HELLOUG_EFL_PKGS REQUIRED
	elementary
	evas
	dlog
	capi-appfw-application
	edje)

FOREACH(flag ${HELLOUG_EFL_PKGS_CFLAGS})
	SET(HELLOUG_EFL_CFLAGS "${HELLOUG_EFL_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(HELLOUG_EFL_CFLAGS, "${HELLOUG_EFL_CFLAGS} -DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

ADD_LIBRARY(${HELLOUG_EFL} SHARED ${HELLOUG_EFL_SRCS})
SET_TARGET_PROPERTIES(${HELLOUG_EFL} PROPERTIES SOVERSION 0.1.0)
SET_TARGET_PROPERTIES(${HELLOUG_EFL} PROPERTIES COMPILE_FLAGS "${HELLOUG_EFL_CFLAGS}")
TARGET_LINK_LIBRARIES(${HELLOUG_EFL} ${HELLOUG_EFL_PKGS_LDFLAGS})

INSTALL(TARGETS ${HELLOUG_EFL} DESTINATION /opt/usr/ug/lib)
INSTALL(TARGETS ${HELLOUG_EFL} DESTINATION /usr/apps/org.tizen.helloworld/lib/ug)
CONFIGURE_FILE(${HELLOUG_EFL}.desktop.in ${CMAKE_BINARY_DIR}/${HELLOUG_EFL}.desktop)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${HELLOUG_EFL}.desktop DESTINATION /usr/share/applications)
INSTALL(FILES ${CMAKE_BINARY_DIR}/doc/ui-gadget_doc.h DESTINATION /opt/usr/apps/org.tizen.helloworld/data)
INSTALL(FILES ${CMAKE_BINARY_DIR}/samples/helloUG-efl/org.tizen.helloworld.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_BINARY_DIR}/samples/helloUG-efl/helloug.rule DESTINATION /etc/smack/accesses2.d/)

